--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="/images/favicon-32x32.png"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,14 +19,14 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <script defer src="/main.js"></script>
 
     <title>Frontend Mentor | Article preview component</title>
   </head>
   <body>
     <section class="top-section">
-      <img src="/images/drawers.jpg" alt="Picture of Designer" />
+      <img src="images/drawers.jpg" alt="Picture of Designer" />
       <p class="first-paragraph">
         Shift the overall look and feel by adding these wonderful touches to
         furniture in your home
