--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="images/favicon-32x32.png"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,14 +19,14 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/main.css" />
-    <script defer src="/main.js"></script>
+    <link rel="stylesheet" href="main.css" />
+    <script defer src="main.js"></script>
 
     <title>Frontend Mentor | Article preview component</title>
   </head>
   <body>
     <section class="top-section">
-      <img src="/images/drawers.jpg" alt="Picture of Designer" />
+      <img src="images/drawers.jpg" alt="Picture of Designer" />
       <p class="first-paragraph">
         Shift the overall look and feel by adding these wonderful touches to
         furniture in your home
@@ -44,7 +44,7 @@
           <img
             id="headshot"
             class="footer-items"
-            src="/images/avatar-michelle.jpg"
+            src="images/avatar-michelle.jpg"
             alt="headshot of Michelle"
           />
           <p id="name" class="footer-items">Michelle Appleton</p>
@@ -54,19 +54,19 @@
         <div id="active">
           <h1 id="share-active" class="second-footer-items">SHARE</h1>
           <img
-            src="/images/icon-facebook.svg"
+            src="images/icon-facebook.svg"
             alt="facebook"
             id="facebook-icon"
             class="second-footer-items"
           />
           <img
-            src="/images/icon-twitter.svg"
+            src="images/icon-twitter.svg"
             alt="twitter"
             id="twitter-icon"
             class="second-footer-items"
           />
           <img
-            src="/images/icon-pinterest.svg"
+            src="images/icon-pinterest.svg"
             alt="pinterest"
             id="pinterest-icon"
             class="second-footer-items"
@@ -76,33 +76,10 @@
         <button id="share-button">
           <img
             id="button-image"
-            src="/images/icon-share.svg"
+            src="images/icon-share.svg"
             alt="social media share button"
           />
         </button>
-
-        <!-- Social Media Pop Up for Desktop -->
-        <!-- <div class="popup">
-          <h1 id="share-active" class="second-footer-items">SHARE</h1>
-          <img
-            src="/images/icon-facebook.svg"
-            alt="facebook"
-            id="facebook-icon"
-            class="second-footer-items"
-          />
-          <img
-            src="/images/icon-twitter.svg"
-            alt="twitter"
-            id="twitter-icon"
-            class="second-footer-items"
-          />
-          <img
-            src="/images/icon-pinterest.svg"
-            alt="pinterest"
-            id="pinterest-icon"
-            class="second-footer-items"
-          />
-        </div> -->
       </footer>
     </section>
   </body>
